# OpenLicenseModule

./: .gitmodules  CMakeLists.txt  README.md  openlicensemodule.cpp  openlicensemodule.h
